<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" 
    android:background="@drawable/mainbackground"
    
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/back_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_press_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/help_5050_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_press_fifty" />

            <Button
                android:id="@+id/helpKhangia_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_press_khangia" />

            <Button
                android:id="@+id/helpCall_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_press_call" />

            <Button
                android:id="@+id/help_switch_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/button_press_switch" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.26" >

            <ImageView
                android:id="@+id/money_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cau1" />

            <TextView
                android:id="@+id/time_id"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="30"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />

            <Button
                android:id="@+id/clock_id"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/time_id"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/time_id"
                android:background="@drawable/clock" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/question_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="2.0"
                android:background="@drawable/cauhoi"
                android:clickable="false"
                android:gravity="center"
                android:longClickable="false"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/cauhoi"
                android:textColor="#FFFF"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/Avatar_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/lvs2" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.98"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/answerA_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3.00"
                android:background="@drawable/button_press"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/A"
                android:textColor="#FFFF" />

            <Button
                android:id="@+id/answerB_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/button_press"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/B"
                android:textColor="#FFFF" />
        </LinearLayout>
	        <com.google.android.gms.ads.AdView  android:id="@+id/adView1"
                         android:layout_width="fill_parent"
                          android:layout_gravity="center_vertical|center_horizontal"
                         android:layout_height="wrap_content"
                         ads:adUnitId="ca-app-pub-7727165943990659/3325619127"
                         ads:adSize="BANNER"
                         />

        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/answerC_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/button_press"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/C"
                android:textColor="#FFFF" />

            <Button
                android:id="@+id/answerD_id"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:background="@drawable/button_press"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/D"
                android:textColor="#FFFF" />

        </LinearLayout>
    </LinearLayout>

  

</LinearLayout>